--- a/src/App.scss
+++ b/src/App.scss
@@ -65,11 +65,6 @@ body{
   }
 }
 
-
-.Map-item{
-
-}
-
 .row{
   width:100%;
   height: 615px;
@@ -94,7 +89,6 @@ body{
       width: 14px;
       height: 14px;
       margin: 8px 0 0 8px;
-      // background: #e6e6e6;
       position: absolute;
       border-radius: 50%;
     }
@@ -167,5 +161,15 @@ body{
       }
     }
 
+    //Css used for MAP
+    .mapContainer{
+        height:500px;
+        right:30px;
+        bottom:30px;
+        width:500px;
+        float:right;
+        top: 100px;
+        position:relative
+    }
 
 
